--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -6,40 +6,8 @@
   <h1>Listing people</h1>
 </div>
 
-<div class="table-responsive">
-  <table class="table table-striped table-bordered table-hover">
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>City</th>
-        <th>State</th>
-        <th colspan="3"></th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <%- @people.each do |person| %>
-      <tr>
-        <td><%= person.name %></td>
-        <td><%= person.city %></td>
-        <td><%= person.state %></td>
-        <td>
-          <%= link_to person do %>
-            <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
-          <% end %>
-        </td>
-        <td>
-          <%= link_to edit_person_path(person) do %>
-            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-          <% end %>
-        </td>
-        <td>
-          <%= link_to person, method: :delete, data: { confirm: 'Are you sure?' } do %>
-            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-          <% end %>
-        </td>
-      </tr>
-      <% end %>
-    </tbody>
-  </table>
-</div>
+<ul class="list-group">
+  <%- @people.each do |person| %>
+    <li class="list-group-item"><%= person.name %> from <%= person.city %> <%= person.state %></li>
+  <%- end %>
+</ul>
