--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -6,4 +6,4 @@
   <h1>Listing people</h1>
 </div>
 
-<%= react_component("Application", people: @people) %>
+<%= react_component("Application", people: @people.as_json) %>
